SERVER-19445 Have the oldest transaction update the oldest tracked ID.

This will help keep the oldest tracked transation ID from falling too far
behind, particularly in single-threaded workloads.  That means we can keep
trimming obsolete updates, preventing pages from growing too large.